# timescalecalculus

./: .editorconfig  README.rst  pyproject.toml  timescalecalculus.py
examples/: discrete_ts.py  fractions_ts.py  primes_ts.py
