[tool.poetry]
name = "timescalecalculus"
version = "0.1.0"
description = "A package for doing calculus on time scales."
authors = ["Tom Cuchta <tomcuchta@gmail.com>"]
license = "GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.9"
mpmath = "^1.1.0"
jitcdde = "^1.8.0"
symengine = "^0.6.1"
matplotlib = "^3.3.3"
scipy = "^1.5.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
black = "^20.8b1"
pre-commit = "^2.9.3"
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
